@@ -1,11 +1,12 @@
 #include <time.h>
-#include <netinet/in.h>
 
 #ifdef WINDOWS
 #include <winsock2.h>
 #include <ws2tcpip.h>
 #include <in6addr.h>
 extern void stop_winsock();
+#else
+#include <netinet/in.h>
 #endif
 
 //#ifdef HAVE_LIBSSL
