@@ -1,4 +1,6 @@
 #ifdef WINDOWS
+#include <winsock2.h>
+#include <ws2tcpip.h>
 #define SHUT_WR SD_SEND		/* for shutdown */
 
 #define LOG_CONS	0
@@ -13,6 +15,10 @@
 #define SIGUSR1	0
 #define SIGPIPE	0
 #define SIGCHLD	0
+
+#ifndef ENOTCONN
+#define ENOTCONN WSAENOTCONN
+#endif
 
 typedef int sigset_t;
 typedef int siginfo_t;
@@ -45,4 +51,18 @@ struct passwd {
 extern int delete_service(char *);
 extern int install_service(char *);
 extern int service_main(int, char **);
+
+/* misc kludges */
+extern int sigaction(int, const struct sigaction *, struct sigaction *);
+extern uid_t getuid(void);
+extern int inet_aton(const char *, struct in_addr *addr);
+extern const char *inet_ntop(int, const void *, char *, socklen_t);
+extern void make_nonblocking(int);
+extern int start_winsock(void);
+
+/* stuff that exists in Windows that MinGW doesn't know about */
+const char *inet_ntop(int af, const void *src,
+                      char *dst, socklen_t size);
+
+int inet_pton(int af, const char *src, void *dst);
 #endif	/* WINDOWS */
